# yolov11_ycx

./: README.md
YOLO11_trtx/: CMakeLists-linux.txt  CMakeLists.txt  yolo11_cls.cpp  yolo11_cls_trt.py  yolo11_det.cpp  yolo11_obb.cpp  yolo11_obb_trt.py  yolo11_pose.cpp  yolo11_seg.cpp
YOLO11_trtx/include/: config.h
YOLO11_trtx/src/: model.cpp
